Fix css overflow stlyes

--- a/packages/office-ui-fabric-react/src/components/Nav/Nav.scss
+++ b/packages/office-ui-fabric-react/src/components/Nav/Nav.scss
@@ -96,7 +96,9 @@ $linkRightPadding: 20px;
 }
 
 .linkText {
+  overflow: hidden;
   vertical-align: middle;
+  text-overflow: ellipsis;
 }
 
 .compositeLink {
